// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App-root App render should render with loading 1`] = `
<theme-provider-stub theme="default">
  <loading-screen-stub isloading="true">
    <layout-screen-stub></layout-screen-stub>
  </loading-screen-stub>
</theme-provider-stub>
`;

exports[`App-root App render should render without loading markup 1`] = `
<theme-provider-stub theme="default">
  <loading-screen-stub>
    <layout-screen-stub></layout-screen-stub>
  </loading-screen-stub>
</theme-provider-stub>
`;
